@@ -1,6 +1,6 @@
 Package: universalmotif
 Title: Import, Modify, and Export Motifs with R
-Version: 1.7.18
+Version: 1.7.19
 Authors@R: c(
       person(c("Benjamin", "Jean-Marie"), "Tremblay", role = c("aut", "cre"),
         email = "b2tremblay@uwaterloo.ca",
@@ -27,7 +27,7 @@ LinkingTo: Rcpp, RcppThread
 RdMacros: Rdpack
 VignetteBuilder: knitr
 biocViews: MotifAnnotation, MotifDiscovery, DataImport, GeneRegulation
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE, old_usage = TRUE)
 Language: en-GB
 Collate:
